initialize repository.
