# service/AccountService.js
@@ -26,7 +26,10 @@ exports.openAccount = function(口座開設設定) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = {
-  "accountNumber" : "accountNumber"
+  "balance" : 0,
+  "name" : "name",
+  "accountNumber" : "accountNumber",
+  "availableBalance" : 6
 };
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
@@ -47,9 +50,69 @@ exports.searchAccounts = function() {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = [ {
-  "accountNumber" : "accountNumber"
+  "balance" : 0,
+  "name" : "name",
+  "accountNumber" : "accountNumber",
+  "availableBalance" : 6
 }, {
-  "accountNumber" : "accountNumber"
+  "balance" : 0,
+  "name" : "name",
+  "accountNumber" : "accountNumber",
+  "availableBalance" : 6
+} ];
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
+  });
+}
+
+
+/**
+ * 口座の取引履歴を検索します。
+ * 
+ *
+ * accountNumber String 口座番号
+ * returns List
+ **/
+exports.searchMoneyTransferActions = function(accountNumber) {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = [ {
+  "amount" : 0,
+  "endDate" : "2000-01-23T04:56:07.000+00:00",
+  "purpose" : "{}",
+  "id" : "id",
+  "fromLocation" : {
+    "name" : "name",
+    "accountNumber" : "accountNumber",
+    "typeOf" : "typeOf"
+  },
+  "toLocation" : {
+    "name" : "name",
+    "accountNumber" : "accountNumber",
+    "typeOf" : "typeOf"
+  },
+  "startDate" : "2000-01-23T04:56:07.000+00:00",
+  "status" : "status"
+}, {
+  "amount" : 0,
+  "endDate" : "2000-01-23T04:56:07.000+00:00",
+  "purpose" : "{}",
+  "id" : "id",
+  "fromLocation" : {
+    "name" : "name",
+    "accountNumber" : "accountNumber",
+    "typeOf" : "typeOf"
+  },
+  "toLocation" : {
+    "name" : "name",
+    "accountNumber" : "accountNumber",
+    "typeOf" : "typeOf"
+  },
+  "startDate" : "2000-01-23T04:56:07.000+00:00",
+  "status" : "status"
 } ];
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
